<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chrome APK Packager</string>
    <string name="action_settings">Settings</string>
    <string name="step1text">Welcome to Chrome APK Packager.</string>
    <string name="step1what">This allows for Chrome Extensions to be easily generated from Android Apps installed on your phone.</string>
    <string name="option_install">Installed application</string>
    <string name="option_select">Select an APK from phone\'s storage</string>
    <string name="step2location">Select from either your installed apps or select an APK from phone\'s storage.</string>
    <string name="choose">Select an option:</string>
    <string name="installList">Select an app below:</string>
    <string name="appSelected">App selected:</string>
    <string name="orSelected">Orientation selected:</string>
    <string name="deviceSelected">Device mode selected:</string>
    <string name="orientation">Orientation for Chrome app:</string>
    <string name="device">Device mode for Chrome app:</string>
    <string name="phone">Phone mode</string>
    <string name="tablet">Tablet mode</string>
    <string name="landscape">Landscape</string>
    <string name="portrait">Portrait</string>
    <string name="completed">Conversion is complete!</string>
    <string name="location">Location: "ChromeAPKS" folder</string>
    <string name="complete_info">Easily share generated zip:</string>
    <string name="share_button">Share Chrome Application</string>
    <string name="other">Other settings:</string>
    <string name="storage">Enable access to apps files on PC/Chrome.</string>
    <string name="adb">Enable ADB</string>

</resources>
