<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingLeft="16dp"
android:paddingRight="16dp"
android:weightSum="1">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/textView"
    android:text="@string/step2location"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:textSize="20sp" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/choose"
        android:background="#46B995"
        android:layout_marginBottom="4dp"
        android:textColor="#ff000000" />

<RadioGroup
    android:id="@+id/radioAPK"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_gravity="center_horizontal"
    android:layout_weight="0.99">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_install"
        android:id="@+id/rbInstalled"
        android:checked="false" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_select"
        android:id="@+id/rbAPK"
        android:checked="false" />
</RadioGroup>

</LinearLayout>
